tests/spec/lex/snapshots/unsupported_rf_in_fstring_interpolation.snap
---
source: tests/spec/lex/mod.rs
description: "f\"{rf\"abc\"}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 2,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 12,
            byte_length: 0,
        },
    ],
    errors: [
        ParseError {
            message: "Raw format strings are currently not supported",
            labels: [
                (
                    Span {
                        file_id: 0,
                        byte_offset: 3,
                        byte_length: 7,
                    },
                    "not yet implemented",
                ),
            ],
            help: Some(
                "Raw format strings are not yet implemented. For now, use a regular f-string with escaped backslashes",
            ),
            note: None,
            code: "lex.unsupported_raw_format_string",
            fix: None,
        },
    ],
    blank_lines: [],
}
